--- a/index.html
+++ b/index.html
@@ -12,9 +12,22 @@
 </head>
 
 <body>
-    <div class="container">
-   
-        <section class="top-content">
+    <div class="page-container">
+            <header>
+                <div class="head-container">
+                    <img class="logo" src="img/lambda-black.png" alt="Lambda Logo">
+                    <nav>
+                        <a href="#">Home</a>
+                        <a href="about.html">About</a>
+                        <a href="#">Products</a>
+                        <a href="#">Blog</a>
+                        <a href="#">Contact</a>
+                    </nav>
+                </div>
+                </header>
+                <img class="top-img" src="img/jumbo.jpg" alt="Lambda Logo">
+        <div class="top-content">
+            <div class="container-row">
             <div class="text-container">
                 <h2>The Future</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
@@ -23,8 +36,8 @@
                 <h2>The Past</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
             </div>
-        </section>
-        
+        </div>
+        <div class="line"></div>
         <section class="middle-content">
         
             <h2>Why Did It Have To Be Boxes...</h2>
@@ -64,7 +77,7 @@
         <footer>
             <nav>
                 <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
