--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             world view of disruptive innovation via workplace diversity
             and empowerment.</p>
         <section class="line"></section>
-      </section><!-- container --> 
+      </section> 
       <section class="container-row">
         <section class="single-container">
           <img src="img/about-plan.png" alt="strategy">
@@ -59,20 +59,24 @@
       <section class="container-row">
         <section class="single-container">
           <img src="img/about-office.png" alt="strategy">
+          <section class="text-container">
           <h4>Places We Work</h4>
           <p>Iterative approaches to corporate strategy foster collaborative
               thinking to further the overall value proposition.</p>
+          </section>
           <button>Learn More</button>
         </section>
         <section class="single-container">
           <img src="img/about-meeting.png" alt="strategy">
+          <section class="text-container">
           <h4>Collaboration</h4>
           <p>Iterative approaches to corporate strategy foster collaborative
               thinking to further the overall value proposition.</p>
-          <button>Learn More</button>
+        </section>
+        <button>Learn More</button>
         </section>
       </section>
-      <section class="single-container">
+      <section class="bottom-content">
         <h4>Let's Work Together</h4>
         <p>Leverage agile frameworks to provide a robust synopsis
             for high level overviews. Iterative approaches to corporate
